Changed license to GPLv3

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mastogramifttt",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Instagram and Mastodon bypass for IFTTT.",
   "main": "index.js",
   "scripts": {
@@ -16,7 +16,7 @@
     "mastodon"
   ],
   "author": "k0ta0uchi",
-  "license": "Apache-2.0",
+  "license": "GPLv3",
   "bugs": {
     "url": "https://github.com/k0ta0uchi/mastogramifttt/issues"
   },
